add wallet connection buttons and pin Reown AppKit versions
- add Keplr and EVM wallet connection buttons to FaucetTab
- add handler functions for wallet connections
- pin @reown/appkit to exact version 1.7.11 to avoid breaking changes
- update chain config with correct chain ID
- add CORS for faucet.republicai.io

--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@cosmjs/stargate": "^0.31",
     "@noble/curves": "^1.9.2",
     "@noble/hashes": "^1.8.0",
-    "@reown/appkit": "^1.7.11",
-    "@reown/appkit-adapter-wagmi": "^1.7.11",
+    "@reown/appkit": "1.7.11",
+    "@reown/appkit-adapter-wagmi": "1.7.11",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/vue-query": "^5.81.2",
     "@vueuse/core": "^14.0.0",
